packages/typ/tests/fixtures/diagnostics/0020_core_if_condition_non_bool_02.ml.expected
File "0020_core_if_condition_non_bool_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0020_core_if_condition_non_bool_02 is not a valid module name.

File "0020_core_if_condition_non_bool_02.ml", line 1, characters 11-12:
1 | let _ = if 1 then 2 else 3
               ^
Error: The constant 1 has type int but an expression was expected of type
         bool
       because it is in the condition of an if-statement
